<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:text="@string/calc_ans"
        android:background="@color/light_grey"
        android:padding="10dp"
        android:textSize="48sp"
        android:gravity="end|bottom" />
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
    <Button
        android:id="@+id/btnSeven"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight = "1"
        android:layout_margin="2dp"
        android:onClick="onDigit"
        android:text="@string/_7"
        />
    <Button
        android:id="@+id/btnEight"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight = "1"
        android:layout_margin="2dp"
        android:onClick="onDigit"
        android:text="@string/_8"
        />
    <Button
        android:id="@+id/btnNine"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight = "1"
        android:layout_margin="2dp"
        android:onClick="onDigit"
        android:text="@string/_9"
        />
    <Button
        android:id="@+id/btnDivide"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight = "1"
        android:layout_margin="2dp"
        android:onClick="onDigit"
        android:text="@string/divide"
        />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnfour"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_4"
            />
        <Button
            android:id="@+id/btnFive"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_5"
            />
        <Button
            android:id="@+id/btnSix"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_6"
            />
        <Button
            android:id="@+id/btnMultiply"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_Multiply"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnOne"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_1"
            />
        <Button
            android:id="@+id/btnTwo"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_2"
            />
        <Button
            android:id="@+id/btnThree"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_3"
            />
        <Button
            android:id="@+id/btnSubtract"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/Subtract"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnZero"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "2"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/_0"
            />

        <Button
            android:id="@+id/btnClear"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/clr"
            />
        <Button
            android:id="@+id/btnPlus"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "1"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/plus"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1"
        >
        <Button
            android:id="@+id/btnEqual"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight = "2"
            android:layout_margin="2dp"
            android:onClick="onDigit"
            android:text="@string/equal"
            />
    </LinearLayout>
</LinearLayout>